--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <header id="jumbotron">
         <nav id="nav">
-           <h3>Event System</h3>
+            <img id="logo" src="assets/img/eventure.png"> 
             <div id="account">
                 <p><a>Masuk</a></p>
                 <button>Daftar</button>  
