--- a/searched.html
+++ b/searched.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <nav>
-                <h3><a href="index.html">Event System</a></h3>
+                <a href="index.html"><img id="logo" src="assets/img/eventure.png"> </a>
                 <div id="links">
                     <p id="concert" class="links">Concerts</p>
                     <p id="arts" class="links">Art & Theatre</p>
