--- a/type.html
+++ b/type.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <nav>
-                <h3><a href="index.html">Event System</a></h3>
+                <a href="index.html"><img id="logo" src="assets/img/eventure.png"></a>
                 <div id="search-container">
                     <input id="search-bar" placeholder="Look for more events!" />
                 </div>
