added event.html to be functional

--- a/event.html
+++ b/event.html
@@ -22,6 +22,40 @@
                 </div>
             </nav>
         </header>
+        <div id="event">
+            <main id="event-detail"></main>
+            <div id="event-desc">
+                <div id="event-text">
+                    <h3>Deskripsi</h3>
+                    <p id="event-description"></p>
+                    <h3>Syarat dan Ketentuan</h3>
+                    <ul id="snk">
+                        <li>Semua harga belum termasuk Pajak Pemerintah dan belum termasuk Biaya Layanan Tiket Platform.</li>
+                        <li>Tiket yang sudah dibeli tidak dapat ditukar, diuangkan kembali, ataupun dibatalkan.</li>
+                        <li>Tiket hanya berlaku apabila pembelian dilakukan sesuai dengan tata cara yang telah ditentukan oleh penyedia layanan transaksi elektronik/online sebagaimana tertera pada website resmi Penyelenggara atau tempat penjualan tiket resmi yang telah ditentukan oleh Penyelenggara. Jika tidak, Pembeli tidak akan dapat melakukan verifikasi apakah e-voucher yang dimiliki Pembeli adalah tiket yang sah atau tidak.</li>
+                        <li>Setiap pemilik tiket kategori TRIBUNE (seated) akan mendapatkan nomor kursi.</li>
+                        <li>Nomor antrian dan nomor kursi akan diberikan kepada Pembeli secara otomatis berdasarkan waktu pembelian dan nomor urut terbaik yang tersedia.</li>
+                        <li>Dengan membeli tiket, maka Pembeli telah menyetujui pengumpulan, penyimpanan dan penggunaan data pribadi yang ada untuk keperluan konser <span id="event-name"></span>.</li>
+                        <li>Setiap e-voucher menggunakan kode unik (barcode) tersendiri dan berlaku hanya untuk satu orang, e-voucher yang sudah digunakan tidak dapat digunakan kembali. Penggandaan e-voucher tidak dapat digunakan untuk masuk ke dalam event berulang kali.</li>
+                        <li>Harap diingat bahwa memasuki area konser atau event hanya satu kali (tidak berulang), apapun tiket kelas yang telah dibeli.</li>
+                        <li>Penyelenggara acara berhak melarang untuk masuk ke lokasi penyelenggaraan acara apabila wristband dengan kode unik (barcode) diketahui telah digunakan sebelumnya oleh pengunjung lainnya.</li>
+                        <li>Tiket atau e-voucher yang sudah dibeli tidak untuk diperjualbelikan kembali dengan harga yang lebih tinggi dari harga resmi yang telah ditentukan oleh Penyelenggara. Jika terdapat indikasi pelanggaran, maka Penyelenggara berhak untuk melakukan upaya hukum dan atau membatalkan tiket tersebut.</li>
+                        <li>Anak-anak di bawah umur 12 tahun wajib didampingi oleh orang-tua atau wali dan tidak diizinkan masuk di area festival (standing). Anak-anak di bawah 10 (sepuluh) tahun tidak diperbolehkan masuk ke tempat pertunjukan.</li>
+                        <li>Dilarang membawa senjata tajam, senjata api,narkoba,bahan mudah terbakar termasuk alkohol, bensin, minyak tanah, dan cologne bertekanan dan sejenisnya ke dalam Tempat Acara.</li>
+                    </ul>
+                </div>
+                <div id="sticky-button">
+                    <button id="beli-button">Beli Tiket</button>
+                </div> 
+            </div> 
+        </div>
+        <div id="suggested" class="extras">
+            <h3>Suggested events</h3>
+            <div id="suggested-list" class="event-list"></div>
+        </div>
+        <footer>
+            <p>© 2023 Fakultas Teknik Universitas Hasanuddin</p>
+        </footer>
     </body>
     <script type="text/javascript" src="assets/js/event.js"></script>
 </html>
